--- a/AIManager/package.json
+++ b/AIManager/package.json
@@ -14,6 +14,7 @@
     "@google/generative-ai": "^0.24.1",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
+    "mongoose": "^8.20.1",
     "node-fetch": "^3.3.2"
   }
 }
